Added packages for New Years, Thanksgiving, and Valentine's Day themes.
Modified package.json and README.md files for each in order to package.

--- a/new-years-theme/package.json
+++ b/new-years-theme/package.json
@@ -2,9 +2,17 @@
     "name": "new-years-theme",
     "displayName": "New Years Theme",
     "description": "A festive theme for your vscode to ring in the new year with!",
+    "publisher": "Viccab",
+    "author": {
+        "name": "Victoria Cabral"
+    },
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.52.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/toQhom/holiday-vscode-themes"
     },
     "categories": [
         "Themes"
