--- a/valentines-day-theme/package.json
+++ b/valentines-day-theme/package.json
@@ -2,9 +2,17 @@
     "name": "valentines-day-theme",
     "displayName": "Valentine's Day Theme",
     "description": "A sweet little theme to celebrate Valentine's Day with!",
+    "publisher": "Viccab",
+    "author": {
+        "name": "Victoria Cabral"
+    },
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.52.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/toQhom/holiday-vscode-themes"
     },
     "categories": [
         "Themes"
