--- a/halloween-theme/package.json
+++ b/halloween-theme/package.json
@@ -2,9 +2,17 @@
     "name": "halloween-theme",
     "displayName": "Halloween-Theme",
     "description": "Get spooked with this ~s c a r y~ theme!",
+    "publisher": "Viccab",
+    "author": {
+        "name": "Rukmitha Chenna"
+    },
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.52.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/toQhom/holiday-vscode-themes"
     },
     "categories": [
         "Themes"
